# unauthority-core

./: .commit_msg  .dockerignore  .git_commit_msg  .gitignore  BUILD_SUCCESS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.txt  Dockerfile  FINAL_COMPLETION_REPORT.md  FIX_1_DYNAMIC_VALIDATOR_ADDRESSES.md  FIX_2_SLASHING_INTEGRATION.md  GENESIS_IMPLEMENTATION_REPORT.md  GENESIS_QUICK_START.md  GITHUB_BUILD_STATUS.md  GRPC_IMPLEMENTATION_REPORT.md  INTEGRATION_TESTS_COMPLETE.md  LICENSE  ORACLE_CONSENSUS_INTEGRATION.md  PLATFORM_NOTES.md  PRIORITY_7_COMPLETE_SECURITY_AUDIT_PREP.md  PRODUCTION_AUDIT_FINAL.md  PROJECT_CLEANUP_REPORT.md  PUBLIC_USER_DEPLOYMENT.md  QUICK_COMMANDS.md  QUICK_START_REMOTE_TESTNET.md  QUICK_TEST_GUIDE.md  README.md  SECURITY.md  TASK_1_GENESIS_COMPLETION.md  TASK_2_VALIDATOR_REWARDS_COMPLETE.md  TASK_3_ANTI_WHALE_MECHANISMS_COMPLETE.md  TESTNET_ACCESS_GUIDE.md  TESTNET_BOOTSTRAP.md  TESTNET_QUICKSTART.md  TESTNET_RESULTS.md  TESTNET_STATUS.md  TEST_CASES.md  (+44 more)
.github/: copilot-instructions.md
.github/workflows/: build-frontends.yml  build-installers.yml  build-validator-installers.yml  ci.yml  flutter-release.yml  release-flutter-validator.yml  release-flutter-wallet.yml  release-installers.yml  release.yml
api_docs/: API_EXAMPLES.md  API_REFERENCE.md
backups/: ledger_14.json  ledger_15.json  ledger_17.json  ledger_18.json  ledger_20.json  ledger_21.json  ledger_24.json  ledger_28.json  ledger_29.json  ledger_30.json  ledger_31.json  ledger_32.json  ledger_38.json  ledger_39.json  ledger_42.json  ledger_43.json  ledger_44.json  ledger_46.json  ledger_48.json  ledger_53.json  ledger_56.json  ledger_59.json  ledger_63.json  ledger_79.json  ledger_8.json  ledger_80.json  ledger_82.json  ledger_99.json
crates/los-cli/: Cargo.toml
crates/los-cli/src/: main.rs
crates/los-cli/src/commands/: common.rs  contract_ops.rs  dex.rs  mod.rs  query.rs  token.rs  tx.rs  validator.rs  wallet.rs
crates/los-consensus/: Cargo.toml
crates/los-crypto/: Cargo.toml
crates/los-network/: Cargo.toml
crates/los-sdk/: Cargo.toml
crates/los-sdk/src/: lib.rs
crates/uat-cli/: Cargo.toml
crates/uat-cli/src/: main.rs
crates/uat-cli/src/commands/: mod.rs  query.rs  tx.rs  validator.rs  wallet.rs
crates/uat-core/: Cargo.toml
crates/uat-core/src/: anti_whale.rs  bonding_curve.rs  distribution.rs  lib.rs  mempool.rs  oracle_consensus.rs  validator_config.rs  validator_rewards.rs  websocket.rs
crates/uat-crypto/: Cargo.toml
crates/uat-crypto/src/: hd_wallet.rs  lib.rs
crates/uat-network/: Cargo.toml
crates/uat-network/src/: fee_scaling.rs  lib.rs  p2p_encryption.rs  p2p_integration.rs  slashing_integration.rs  tor_transport.rs  validator_rewards.rs
crates/uat-node/: Cargo.toml  FAUCET_README.md  build.rs
crates/uat-node/src/: backup.rs  db.rs  faucet.rs  faucet.rs.disabled  genesis.rs  grpc_server.rs  main.rs  mempool.rs  metrics.rs  oracle.rs  rate_limiter.rs  testnet_config.rs  validator_api.rs  validator_rewards.rs  websocket_server.rs
crates/uat-vm/: Cargo.toml
crates/uat-vm/src/: lib.rs  main.rs  oracle_connector.rs
dev_docs/: .gitignore  CONSENSUS.md  CRATE_REFERENCE.md  DEVELOPER_GUIDE.md  EXCHANGE_INVESTOR_OUTREACH.md  GENESIS.md  GOSSIP_PROTOCOL.md  SMART_CONTRACTS.md  TESTNET_RUN_GUIDE.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  ATTACK_SURFACE_ANALYSIS.md  AUDITOR_CODE_WALKTHROUGH.md  CLI_REFERENCE.md  DATABASE_MIGRATION_REPORT.md  DOCKER_DEPLOYMENT.md  E2E_TESTNET_BUG_REPORT.md  E2E_TEST_REPORT.md  ECONOMIC_SECURITY_REVIEW.md  EXCHANGE_INTEGRATION.md  FAQ_INSTALLER.md  FLUTTER_VALIDATOR_GUIDE.md  INSTALLATION.md  INSTALLER_BUILD_GUIDE.md  INSTALLER_STRATEGY.md  JOIN_TESTNET.md  KNOWN_RISKS_AND_MITIGATIONS.md  PROJECT_STATUS.md  PROMETHEUS_MONITORING_REPORT.md  QUALITY_ASSURANCE.md  README.md  REMOTE_TESTNET_GUIDE.md  SECURITY_AUDIT_PREPARATION.md  SMART_CONTRACTS.md  TESTNET_DEPLOYMENT.md  TESTNET_OPERATION.md  TESTNET_VS_MAINNET.md  TOR_BROWSER_INSTALL_MAC.md  TOR_SETUP.md  TOR_TESTNET_GUIDE.md  VALIDATOR_GUIDE.md  WALLET_GUIDE.md  WHITEPAPER.md  grafana-dashboard.json  prometheus-alerts.yml  prometheus.yml
examples/contracts/: Cargo.toml  README.md  dex_amm.rs  hello_world.rs  oracle_price_feed.rs  token.rs  usp01_token.rs
flutter_validator/: README.md  pubspec.yaml
flutter_wallet/: README.md  TOR_IMPLEMENTATION.md  pubspec.yaml  test_bundled_tor.sh
frontend-validator/: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-wallet/: .gitignore  README.md  index.html  package-lock.json  package.json  start_wallet.sh  tailwind.config.js  vite.config.ts
genesis/: Cargo.toml  README.md  genesis_config.json  test_seed.rs
genesis/src/: main.rs  main_backup.rs  main_clean.rs
genesis/testnet-genesis/: testnet_wallets.json
node_a_data/: wallet.json
node_b_data/: ledger_state.json  wallet.json
node_c_data/: ledger_state.json  wallet.json
scripts/: QUICKSTART.sh  STATUS.sh  bootstrap_genesis.sh  build_installers.sh  cleanup_old_tags.sh  deploy_testnet.sh  e2e_test_onion.sh  final_production_check.sh  generate_testnet_wallets.sh  install_frontends.sh  install_validator.sh  launch_3_validators.sh  launch_4_validators.sh  launch_all.sh  launch_ui.sh  monitor_testnet.sh  quick_remote_testnet.sh  refactor_uat_to_los.sh  remove_genesis_from_git.sh  setup_tor_mainnet.sh  setup_validators.sh  start_3_nodes.sh  start_all.sh  start_backend.sh  start_both.sh  start_network.sh  start_remaining.sh  start_remote_testnet.sh  start_testnet.sh  start_testnet_4validators.sh  start_tor_testnet.sh  start_validator.sh  start_wallet.sh  stop_3_validators.sh  stop_all.sh  stop_network.sh  stop_testnet.sh  stop_ui.sh  test_all_fixes.sh  test_genesis_bip39.sh  (+13 more)
testnet-genesis/: QUICKSTART_TESTING.md  README_TESTNET.md  SUMMARY_TABLE.txt  testnet_wallets.json
tests/: comprehensive_tests.rs  e2e_los_mainnet.rs  e2e_usp01_dex.rs  integration_test.rs  test_register_validator.rs
uat_database/: db  snap.00000000000017E0
(+249 files in other folders)
