[workspace]
resolver = "2"

members = [
    "genesis",
    "crates/uat-core",
    "crates/uat-crypto", 
    "crates/uat-network", 
    "crates/uat-node",
    "crates/uat-consensus",
    "crates/uat-vm", "crates/uat-cli",
    # "crates/uat-p2p",
]

# Integration tests package
[package]
name = "unauthority-integration-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
harness = true

[dependencies]
uat-core = { path = "crates/uat-core" }
uat-crypto = { path = "crates/uat-crypto" }
uat-network = { path = "crates/uat-network" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hex = "0.4"

[patch.crates-io]
pqcrypto-internals = { path = "pqcrypto-internals-seeded" }
