[workspace]
resolver = "2"

members = [
    "genesis",
    "crates/los-core",
    "crates/los-crypto", 
    "crates/los-network", 
    "crates/los-node",
    "crates/los-consensus",
    "crates/los-vm", "crates/los-cli",
    "crates/los-sdk",
]

exclude = [
    "examples/contracts",
    "pqcrypto-internals-seeded",
]

# Integration tests package
[package]
name = "unauthority-integration-tests"
version = "0.1.0"
edition = "2021"
autotests = false

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
harness = true

[[test]]
name = "e2e_los_mainnet"
path = "tests/e2e_los_mainnet.rs"
harness = true

[[bin]]
name = "test-register-validator"
path = "tests/test_register_validator.rs"

[dependencies]
los-core = { path = "crates/los-core" }
los-crypto = { path = "crates/los-crypto" }
los-consensus = { path = "crates/los-consensus" }
los-network = { path = "crates/los-network" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hex = "0.4"

[patch.crates-io]
pqcrypto-internals = { path = "pqcrypto-internals-seeded" }
