[package]
name = "uat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uat-core = { path = "../uat-core" }
uat-crypto = { path = "../uat-crypto" }
rpassword = "7.3"
colored = "2.1"
dirs = "5.0"