[package]
name = "uat-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
mainnet = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
toml = "0.8"
uat-crypto = { path = "../uat-crypto" }

[dev-dependencies]
tempfile = "3.8"
# Tambahkan baris ini:
uat-crypto = { path = "../uat-crypto" }