[package]
name = "uat-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wrapper Rust untuk implementasi referensi C Dilithium
pqcrypto-dilithium = "0.5" 
pqcrypto-traits = "0.3"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
age = "0.10"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.7"
bip39 = "2.0"
sha3 = "0.10"
ed25519-dalek = "2.0"