[package]
name = "uat-node"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
flate2 = "1.0"
base64 = "0.13"
hex = "0.4"
uat-core = { path = "../uat-core" }
uat-crypto = { path = "../uat-crypto" }
uat-network = { path = "../uat-network" }