[package]
name = "uat-node"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
base64 = "0.13"
hex = "0.4"
warp = "0.3"
toml = "0.8"
sha3 = "0.10"
uat-core = { path = "../uat-core" }
uat-crypto = { path = "../uat-crypto" }
uat-network = { path = "../uat-network" }
uat-vm = { path = "../uat-vm" }

# gRPC dependencies (NEW)
tonic = "0.12"
prost = "0.13"
chrono = "0.4"
sled = "0.34.7"
prometheus = { version = "0.14.0", features = ["process"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
