[package]
name = "uat-node"
version = "1.0.7"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
base64 = "0.13"
hex = "0.4"
warp = "0.3"
toml = "0.8"
sha3 = "0.10"
uat-core = { path = "../uat-core" }
uat-crypto = { path = "../uat-crypto" }
uat-consensus = { path = "../uat-consensus" }
uat-network = { path = "../uat-network" }
uat-vm = { path = "../uat-vm", optional = true }

# gRPC dependencies (NEW)
tonic = "0.12"
prost = "0.13"
chrono = "0.4"
sled = "0.34.7"
prometheus = { version = "0.14.0", features = ["process"] }
rand = "0.8"  # For faucet rate limiting
zeroize = "1.7"  # FIX C12-03: Zeroize secret key clones in async tasks

[features]
default = ["vm"]
vm = ["uat-vm"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
