[package]
name = "uat-vm"
version = "0.1.0"
edition = "2021"

[features]
default = []
mainnet = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
wasmer = "4.3"
wasmer-compiler-cranelift = "4.3"
chrono = "0.4"

[[bin]]
name = "uat-vm"
path = "src/main.rs"
